# ReversiGameServerSide

./: CMakeLists.txt  CloseCommand.cpp  CloseCommand.h  CloseTheGames.cpp  CloseTheGames.h  Command.h  CommandsManager.cpp  CommandsManager.h  GameManager.cpp  GameManager.h  Game_Room.cpp  Game_Room.h  GetGamesListCommand.cpp  GetGamesListCommand.h  JoinCommand.cpp  JoinCommand.h  PlayCommand.cpp  PlayCommand.h  README.md  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  makefile
